# pgpatchlens

./: .gitignore  README.md  package.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
pg_patchlens/: analyze.py  cli.py  ingest.py  server.py
pgpatchlens/: analyze.py  cli.py  db.py  ingest.py  server.py
pgpatchlens/static/: index.html
pi-extension/: index.js
plugin/.claude-plugin/: plugin.json
plugin/skills/patchlens/: SKILL.md
skills/patchlens/: SKILL.md
skills/pgpatchlens/: SKILL.md
