[project]
name = "pg_patchlens"
version = "0.1.0"
description = "Easier review of PostgreSQL commitfest patches — local web UI, subscription-powered via the claude/codex CLI"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.116.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "uvicorn[standard]>=0.50.2",
]

[project.scripts]
pgpatchlens = "pg_patchlens.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pg_patchlens"]
